--- a/src/views/pending.ejs
+++ b/src/views/pending.ejs
@@ -4,18 +4,12 @@
 
 <script>
   const checkGameStatus = function(){
-    var xhr = new XMLHttpRequest;
     var gameUrl = '/games/<%= gameId %>';
-
-    xhr.open('GET', gameUrl);
-
-    xhr.onload = function () {
-      if (xhr.responseURL.indexOf('pending') === -1) { // not pending
+    $.ajax(gameUrl).done(function(data){
+      if (data.indexOf('Waiting for other players') === -1) { // not pending
         document.location = gameUrl;
       }
-    };
-
-    xhr.send();
+    });
   }
 
   setInterval(checkGameStatus, 1000);
