--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -14,6 +14,8 @@
     <!-- styles -->
     <link rel="stylesheet" href="/css/material-dashboard.min.css">
     <link rel="stylesheet" href="/css/main.min.css">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   </head>
   <body>
     <%- include('includes/head'); %>
